--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -28,5 +28,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: install and build
         run: |
-          npm install
+          npm ci
           npm run build
